fix extra scrollbar issue

--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -4,6 +4,7 @@
 
   width: 100%;
   margin-top: 20px;
+  overflow: hidden;
 
   .left-column {
     float: left;
